edit and add work (still no defaultvals in edit)

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^4.0.4",
     "redux-firestore": "^0.9.0",
     "redux-thunk": "^2.3.0",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
